// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Square Matches snapshot 1`] = `
<div
  className="sc-bdnylx gPrTLT"
/>
`;

exports[`Square When receives backgroundColor prop Matches snapshot 1`] = `
<div
  className="sc-bdnylx fhptMj"
/>
`;
